# Rust-Programming-Cookbook

./: .gitignore  .gitmodules  README.md
Chapter01/: assignment  assignment.rs  boolean  calculator.rs  decimal.rs  mutuable  sample  string  string.rs  tuples
Chapter01/__old/: arithmetic.rs  assignment.rs  boolean.rs  calculator.rs  decimal.rs  lib.rs  mutuable.rs  sample.rs
Chapter01/data-types/: Cargo.toml
Chapter01/debug-me/: Cargo.toml  launch.json
Chapter01/execution-flow/: Cargo.toml
Chapter01/hello-world/: Cargo.toml
Chapter01/pi-estimator/: Cargo.toml
Chapter01/rust-pilib/: Cargo.toml
Chapter01/sequences/: Cargo.toml
Chapter01/testing/: Cargo.toml
Chapter01/traits/: Cargo.toml
Chapter02/: binding  binding.rs  closures  condition  constant  constant.rs  enum  expression  expression.rs  implement  implement.rs  looping  pointer  struct  struct.rs  trait  typecasting  typecasting.rs
Chapter02/custom-iterators/: Cargo.toml
Chapter02/enums/: Cargo.toml
Chapter02/generics/: Cargo.toml
Chapter02/iteration/: Cargo.toml
Chapter02/lifetimes/: Cargo.toml
Chapter02/mut-sharing-ownership/: Cargo.toml
Chapter02/not-null/: Cargo.toml
Chapter02/pattern-matching/: Cargo.toml
Chapter02/sharing-ownership/: Cargo.toml
Chapter02/trait-bounds/: Cargo.toml
Chapter02/unsafe-ways/: Cargo.toml
Chapter03/external-deps/: Cargo.toml
Chapter03/external-deps/benches/: cooking_with_rust.rs
Chapter03/external-deps/src/: main.rs
Chapter03/publish-crate/: Cargo.toml  README.md
Chapter03/publish-crate/src/: lib.rs
Chapter04/: libsample_lib.rlib  sample_access  sample_access.rs  sample_control  sample_control.rs  sample_exec  sample_exec.rs  sample_lib.rs  sample_mod  sample_mod.rs  sample_nested  sample_nested.rs  sample_split  sample_split.rs  sample_struct  sample_struct.rs
Chapter05/: sample_channel  sample_channel.rs  sample_child_process  sample_child_process.rs  sample_lock  sample_lock.rs  sample_move  sample_move.rs  sample_multiple_threads  sample_multiple_threads.rs  sample_thread_expt  sample_thread_expt.rs  sample_wait  sample_wait.rs
Chapter06/: sample_aliases_result  sample_aliases_result.rs  sample_and_then  sample_and_then.rs  sample_designator.rs  sample_dry  sample_early_ret  sample_early_ret.rs  sample_map  sample_map.rs  sample_map_result  sample_map_result.rs  sample_match  sample_match.rs  sample_multiple_err  sample_multiple_err.rs  sample_option  sample_option.rs  sample_panic  sample_panic.rs  sample_try  sample_try.rs
Chapter07/: sample_common_macros  sample_common_macros.rs  sample_designator  sample_dry.rs  sample_macro  sample_macro.rs  sample_overloading_macro  sample_overloading_macro.rs  sample_repeat  sample_repeat.rs
Chapter07/browser-rust/rust-digest/: Cargo.toml
Chapter07/browser-rust/rust-digest/src/: lib.rs
Chapter08/advanced-orm/: Cargo.toml
Chapter08/advanced-orm/db/: bookmarks.sqlite
Chapter08/advanced-orm/src/: main.rs  models.rs  schema.rs
Chapter08/json-handling/: Cargo.toml
Chapter08/json-handling/src/: main.rs
Chapter10/dynamic-data/: Cargo.toml  create_pickle.py  user.pkl
Chapter10/dynamic-data/src/: lib.rs
Chapter10/web-requests/: Cargo.toml  history.txt
Chapter10/web-requests/src/: main.rs
(+213 files in other folders)
