[package]
name = "advanced-orm"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1"
serde = "1"
serde_derive = "1"
env_logger = "0.6"
diesel = {version = "1.4", features = ["sqlite"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
futures = "0.1"
chrono = "0.4"