[package]
name = "json-handling"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.6"